--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
+body {
+    background: #351516
+}
+
 p{
     text-align: center;  
 }
 
-body {
-    background: #CCCCCC
+em strong {
+    color: #ed3c36;
 }
