--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 body {
-    background: #351516;
+    background: #CCCCCC;
+}
+
+h1 {
+    style="text-align: center"
 }
 
 p{
@@ -7,5 +11,5 @@ p{
 }
 
 em strong {
-    color: #ed3c36;
+    color: #351516;
 }
