--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@ body {
 
 #mensageiros {
     width: 100%;
-    height: 900px;
 }
 
 h1 {
@@ -21,4 +20,8 @@ p{
 
 em strong {
     color: #FF0000;
+}
+
+.itens {
+    font-style: italic;
 }
