--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ h2 {
 }
 ul{
     display: inline-block;
-    vertical-align: top;
+    vertical-align: center;
     width: 20%;
     margin-right: 15%;
 }
