--- a/style.css
+++ b/style.css
@@ -40,9 +40,9 @@ h2 {
 }
 ul{
     display: inline-block;
-    vertical-align: center;
+    vertical-align: top;
     width: 20%;
-    margin-right: 15%;
+    margin-right: 10%;
 }
 
 .ordem {
