--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 .Principal {
-    background: #CCCCCC
+    background: #FB7667
 }
 
 h1 {
@@ -23,7 +23,7 @@ p{
 }
 
 em strong {
-    color: #FF0000;
+    color: #72160C;
 }
 
 .itens {
@@ -31,7 +31,7 @@ em strong {
 }
 
 .Harbingers {
-    background: #FFFF;
+    background:#523934;
     padding: 30px;
 }
 
