--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 .Principal {
-    background: #FB7667
+    background: #085399
 }
 
 h1 {
@@ -31,7 +31,7 @@ em strong {
 }
 
 .Harbingers {
-    background:#523934;
+    background:#273D52;
     padding: 30px;
 }
 
