--- a/produtos.css
+++ b/produtos.css
@@ -25,7 +25,7 @@ nav li {
 nav a {
     text-transform: uppercase;
     color: black;
-    font-weight: bold;
+    font-weight: bold; 
     font-size: 22px;
     text-decoration: none;    
  }
@@ -40,4 +40,8 @@ nav a:hover {
 .jobo {
     width:225px ;
     height:225px ;
+}
+
+nav li {
+    display: inline;
 }
