--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ nav li {
 
 nav a {
     text-transform: uppercase;
-    color: black;
+    color: white;
     font-weight: bold;
     font-size: 22px;
     text-decoration: none;    
