--- a/produtos.css
+++ b/produtos.css
@@ -17,6 +17,12 @@ header {
     margin: 0 auto;
 }
 
+nav {
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
 nav li {
     display: inline;
     margin: 0 0 0 15px;
