--- a/style.css
+++ b/style.css
@@ -17,6 +17,12 @@ header {
     margin: 0 auto;
 }
 
+nav {
+    position: absolute;
+    top: 53px;
+    right: 0;
+}
+
 nav li {
     display: inline;
     margin: 0 0 0 15px;
@@ -25,7 +31,7 @@ nav li {
 nav a {
     text-transform: uppercase;
     color: white;
-    font-weight: bold;
+    font-weight: bold; 
     font-size: 22px;
     text-decoration: none;    
  }
@@ -36,12 +42,6 @@ nav a:hover {
 }
 
 /*HOME*/
-
-h1 {
-    text-align: center;
-    color: azure;
-    background:#101f2e;
-}
 
 #mensageiros {
     width: 100%;
