--- a/produtos.css
+++ b/produtos.css
@@ -56,10 +56,23 @@ nav a:hover {
 .produtos {
     width: 940px;
     margin: 0 auto;
+    padding: 50px 0;
 }
 
 .produtos li {
     display: inline-block;
     text-align: center;
     width: 30%;
+    vertical-align: top;
+    background: #101f2e;
+}
+
+.produtos h2 {
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.produto-preco {
+    font-size: 22px;
+    font-weight: bold;
 }
