--- a/produtos.css
+++ b/produtos.css
@@ -65,6 +65,9 @@ nav a:hover {
     width: 30%;
     vertical-align: top;
     background: #101f2e;
+    margin: 0 1.5%;
+    padding: 30px 20px;
+    box-sizing: border-box;
 }
 
 .produtos h2 {
@@ -77,6 +80,7 @@ nav a:hover {
     font-size: 22px;
     font-weight: bold;
     color: white;
+    margin: 10px 0 0;
 }
 
 .produto-descricao {
