--- a/produtos.css
+++ b/produtos.css
@@ -64,10 +64,12 @@ nav a:hover {
     text-align: center;
     width: 30%;
     vertical-align: top;
-    background: #101f2e;
     margin: 0 1.5%;
     padding: 30px 20px;
     box-sizing: border-box;
+    border-color: #000000;
+    border-width: 2px;
+    border-style: solid;
 }
 
 .produtos h2 {
