--- a/produtos.css
+++ b/produtos.css
@@ -62,6 +62,7 @@ nav a:hover {
 .produtos li {
     display: inline-block;
     text-align: center;
+    background: #101f2e;
     width: 30%;
     vertical-align: top;
     margin: 0 1.5%;
