--- a/produtos.css
+++ b/produtos.css
@@ -68,7 +68,7 @@ nav a:hover {
     margin: 0 1.5%;
     padding: 30px 20px;
     box-sizing: border-box;
-    border-color: #000000;
+    border-color: #ff0000;
     border-width: 2px;
     border-style: solid;
 }
