--- a/produtos.css
+++ b/produtos.css
@@ -67,6 +67,7 @@ nav a:hover {
     vertical-align: top;
     margin: 0 1.5%;
     padding: 30px 20px;
+    padding-bottom: 30px;
     box-sizing: border-box;
     border-color: #ff0000;
     border-width: 2px;
