--- a/produtos.css
+++ b/produtos.css
@@ -72,6 +72,7 @@ nav a:hover {
     border-color: #ff0000;
     border-width: 2px;
     border-style: solid;
+    border-radius: 20px;
 }
 
 .produtos h2 {
