--- a/produtos.css
+++ b/produtos.css
@@ -56,7 +56,7 @@ nav a:hover {
 .produtos {
     width: 940px;
     margin: 0 auto;
-    padding: 50px 0;
+    padding-top: 50px;
     padding-bottom: 30px;
 }
 
