--- a/produtos.css
+++ b/produtos.css
@@ -67,7 +67,7 @@ nav a:hover {
     width: 30%;
     vertical-align: top;
     margin: 0 1.5%;
-    padding: 30px 20px;
+    padding: 30px 20px 30px;
     box-sizing: border-box;
     border-color: #ff0000;
     border-width: 2px;
