--- a/produtos.css
+++ b/produtos.css
@@ -15,6 +15,7 @@ header {
     position: relative;
     width: 800px;
     margin: 0 auto;
+    margin-bottom: 20px;
 }
 
 nav {
@@ -73,6 +74,7 @@ nav a:hover {
     border-width: 2px;
     border-style: solid;
     border-radius: 20px;
+    margin-bottom: 20px;
 }
 
 .produtos li:hover {
