--- a/produtos.css
+++ b/produtos.css
@@ -107,3 +107,8 @@ nav a:hover {
     font-size: 18px;
     color: white;
 }
+
+footer {
+    text-align: center;
+    background:url("FundoCinza.jpg")
+}
