--- a/style.css
+++ b/style.css
@@ -95,6 +95,7 @@ ul{
     width: 20%;
     height: 20%;
     padding-right: 50%;
+    margin-left: 20%;
 }
 
 #sao {
@@ -116,4 +117,8 @@ ul{
     font-size: 80px;
     font-weight: bold;
     color: white;
+}
+
+.vida {
+    margin-left: 20%;
 }
