--- a/style.css
+++ b/style.css
@@ -128,14 +128,14 @@ form {
     margin: 40px 0;
 }
 
-form label {
+.eunaoqueromais {
     display: block;
     font-size: 20px;
     margin: 0 0 10px;
     color: white;
 }
 
-form input {
+form input, form textarea {
     display: block;
     margin: 0 0 20px;
     padding: 10px 25px;
