--- a/style.css
+++ b/style.css
@@ -128,14 +128,14 @@ form {
     margin: 40px 0;
 }
 
-.input-padrao {
-    display: block;
+form label, form p {
+    display:block;
     font-size: 20px;
     margin: 0 0 10px;
-    
+    color: white;
 }
 
-form input, form textarea {
+.input-padrao {
     display: block;
     margin: 0 0 20px;
     padding: 10px 25px;
