--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ nav a:hover {
 
 /*PRODUTOS*/
 
-main {
+.verme {
     background: url(FundoVinho.jpg);
 }
 
@@ -120,7 +120,6 @@ footer {
 main {
     width: 940px;
     margin: 0 auto;
-    background-color: #2e0909;
 }
 
 form { 
