--- a/style.css
+++ b/style.css
@@ -126,7 +126,7 @@ form {
     margin: 40px 0;
 }
 
-form label, form p {
+form label, form legend {
     display:block;
     font-size: 20px;
     margin: 0 0 10px;
@@ -141,4 +141,36 @@ form label, form p {
 
 .checkbox {
     margin: 20px 0;
+}
+
+.enviar {
+    width: 40%;
+    padding: 15px 0;
+    background: #581515;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    border: none;
+    border-radius: 5px;
+    transition: 1s background;
+    cursor: pointer;
+}
+
+.enviar:hover {
+    background: #cc2424
+}
+
+table {
+    margin: 20px 0 40px;
+}
+
+thead {
+    background: #581515;
+    color: white;
+    font-weight: bold;
+}
+
+td, th {
+    border: 1px solid rgba(0, 0, 0, 0);
+    padding: 8px 15px;
 }
