--- a/style-home.css
+++ b/style-home.css
@@ -47,7 +47,7 @@ nav a:hover {
     width: 100%;
 }
 
-.Principal {
+.principal {
     background: #213461
 }
 
@@ -91,7 +91,7 @@ ul{
     color: aliceblue;
 }
 
-.ordem {
+.aordem {
     width: 20%;
     height: 20%;
     padding-right: 50%;
