--- a/style.css
+++ b/style.css
@@ -187,7 +187,6 @@ td, th {
 
 .principal p {
     margin: 0 0 1em;
-    text-align: center;
 }
 
 .principal strong {
@@ -205,4 +204,8 @@ td, th {
 
 .aordem {
     width: 30%;
+}
+
+section {
+    display: inline-block;
 }
