--- a/style.css
+++ b/style.css
@@ -183,6 +183,7 @@ td, th {
     text-align: center;
     font-size: 2em;
     margin: 0 0 1em;
+    clear: left;
 }
 
 .principal p {
@@ -200,6 +201,7 @@ td, th {
 .emblema {
     width: 150px;
     float: left;
+    margin: 20px;
 }
 
 .aordem {
