--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    
+    font-family: 'Montserrat', sans-serif;
 }
 
 header {
@@ -199,7 +199,7 @@ td, th {
 }
 
 .emblema {
-    width: 150px;
+    width: 120px;
     float: left;
     margin: 20px;
     padding-left: 25%;
