--- a/style.css
+++ b/style.css
@@ -186,6 +186,12 @@ td, th {
     clear: left;
 }
 
+.missao {
+    font-size: 2em;
+    font-weight: bold;
+    text-align: center;
+}
+
 .principal p {
     margin: 0 0 1em;
 }
@@ -213,6 +219,15 @@ td, th {
 .lista-itens {
     width: 40%;
     display: inline-block;
+    vertical-align: middle;
+}
+
+.itens {
+    line-height: 1.5;
+}
+
+.itens:first-child {
+    font-weight: bold;
 }
 
 .aordem {
@@ -230,5 +245,5 @@ td, th {
 
 .video {
     width: 560px;
-    margin: 1em auto;
+    margin: 2em auto;
 }
