--- a/style.css
+++ b/style.css
@@ -193,7 +193,7 @@ td, th {
 }
 
 .oque {
-    margin-top: 20px;
+    padding-top: 20px;
     font-size: 2em;
     font-weight: bold;
     padding-left: 46%;
